auto-test/tests/chapter_18/invalid_types/extra_credit/scalar_required/cast_between_unions.c


union u1 {
    int a;
};


int main(void){
    union u1 var = {10};
    (union u1) var; 
    return 0;
}